k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: goapp
  labels: 
    app: goapp
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: goapp
  template:
    metadata:
      labels:
        app: goapp
    spec:
      containers:
        - name: goapp
          image:  kaushal090/goapp:v1
          ports:
          - containerPort: 8080
