k8s/manifests/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: goapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: goapp
            port:
              number: 80
